--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,18 @@ edition = "2018"
 name = "tsar"
 path = "src/bin.rs"
 
+
+[build-dependencies] # <-- We added this and everything after!
+lalrpop = "0.17.2"
+
 [dependencies]
-pest = "2.1"
-pest_derive = "2.1"
+lalrpop-util = "0.17.2"
+regex = "1.3.1"
+toml = "0.5.3"
+serde = "1.0.101"
+serde_derive = "1.0.101"
+git2 = "0.10.1"
+url = "2.1.0"
+clap = "2.33.0"
+xasm = "0.4.1"
+xassembler = "0.4.1"
