Cargo description homepage repo license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "tsar"
 version = "0.1.0"
 authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
 edition = "2018"
+description = "Tsar programming language"
+license = "MIT"
+documentation = "https://docs.rs/tsar"
+homepage = "https://github.com/adam-mcdaniel/tsar"
+repository = "https://github.com/adam-mcdaniel/tsar"
 
 [[bin]]
 name = "tsar"
