--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tsar"
-version = "0.1.5"
+version = "0.2.0"
 authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
 edition = "2018"
 description = "Tsar programming language"
@@ -26,5 +26,6 @@ serde_derive = "1.0.101"
 git2 = "0.10.1"
 url = "2.1.0"
 clap = "2.33.0"
-xasm = "0.4.2"
-xassembler = "0.4.1"
+xasm = "0.5.0"
+xassembler = "0.5.0"
+fs_extra = "1.1"
