--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tsar"
 version = "0.2.12"
-authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
+authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
 edition = "2018"
 description = "Tsar programming language"
 license = "MIT"
@@ -13,7 +13,7 @@ repository = "https://github.com/adam-mcdaniel/tsar"
 name = "tsar"
 path = "src/bin.rs"
 
-[build-dependencies] # <-- We added this and everything after!
+[build-dependencies]
 lalrpop = "0.17.2"
 
 [dependencies]
